kubernetes/taiga.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga
  labels:
    app: taiga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: taiga
    spec:
      containers:
        - name: taiga
          image: mlukman/taiga.io:v5
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: pvc
              subPath: taiga-media
              mountPath: /opt/taiga/media
            - name: pvc
              subPath: taiga-static
              mountPath: /opt/taiga/static
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: taiga
---
apiVersion: v1
kind: Service
metadata:
  name: taiga
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: taiga
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gitlab-nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  labels:
    app: taiga
  name: taiga
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: taiga
          servicePort: 80
        path: /
  tls:
  - hosts:
    - localhost
